# peer-audited--behavioral-blockchain

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  board.config.json  docker-compose.yml  op_items.json  op_items_raw.txt  op_items_v2.txt  package-lock.json  package.json  render.yaml  seed.yaml  setup.sh  tsconfig.json  turbo.json
.claude/: MEMORY.md
.claude/plans/: 2026-02-28-e2g-roadmap-tasks.md  2026-03-04-doctoral-dissertation-styx.md  2026-03-04-groq-llama-chat-route.md  indexed-gathering-iverson.md
.codex/plans/: 2026-03-04-doc-intelligence-implementation-pass.md  2026-03-05-evaluation-to-growth-exhaustive-implementation-v2.md  2026-03-09-beta-launch-propulsion.md  (+29 more)
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
android/: README.md
assets/: README.md
config/: README.md
docs/: CLAUDE.md  FEATURE-BACKLOG.md  MANIFEST.md  README.md  doc--evaluation-to-growth-review.md  implementation-status.md  index.html  phase1-private-beta-scope.md  roadmap.md
e2e/: auth-guards.spec.ts  auth.spec.ts  contract-lifecycle.spec.ts  dashboard.spec.ts  fury-workbench.spec.ts  recovery-contracts.spec.ts  wallet.spec.ts
examples/: README.md
ios/: README.md
macos/: README.md
scripts/: README.md  build-chat-context.ts  gatekeeper-scan.sh
src/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: main.rs
tools/: README.md
windows/: README.md
(+996 files in other folders)
