[package]
name = "styx-judge"
version = "0.1.0"
description = "Styx Judge - Administrative Dashboard"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
